@startuml
enum Reason {
    Right,
    NonCircleOrbit,
    Crash,
    Overtime,
}
class QuizSolver {
    + waitTime : float
    + radiusOffset : float = .2f
    + isRight : bool <<get>> <<set>> = true
    + TmpAnswer : float <<get>> <<set>>
    + isAnswered : bool <<get>> <<set>> = false
    + <<override>> Start() : void
    + GetQuizSentence() : string
}
QuizBase <|-- QuizSolver
QuizSolver --> "quizUI" QuizUI
QuizSolver --> "resultEvent" UnityEvent
QuizSolver --> "answerEvent" UnityEvent
QuizSolver --> "reason" Reason
@enduml
